# QuicFTP

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
config/: server.toml
crates/quicftp-client/: Cargo.toml
crates/quicftp-client/src/: client.rs  main.rs  shell.rs
crates/quicftp-common/: Cargo.toml
crates/quicftp-common/src/: config.rs  lib.rs  protocol.rs  tls.rs  user.rs
crates/quicftp-server/: Cargo.toml
crates/quicftp-server/src/: handler.rs  main.rs  server.rs  session.rs
